infra/k8s-dev/traefik-admin-srv.yml
kind: Service
apiVersion: v1
metadata:
  name: traefik-admin-srv
spec:
  selector:
    app: traefik
  ports:
    - name: web
      port: 80
      targetPort: 8080
