infra/k8s-dev/ingress-srv.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: opuscm.com
      http:
        paths:
          - path: /api/users
            backend:
              serviceName: users-srv
              servicePort: 3000
          - path: /submittals
            backend:
              serviceName: submittals-srv
              servicePort: 3000
          - path: /foo
            backend:
              serviceName: whoami
              servicePort: 80
          - path: /admin
            backend:
              serviceName: traefik-admin-srv
              servicePort: 80
#
#
# INGRESS-NGINX config
# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: ingress-service
#   annotations:
#     kubernetes.io/ingress.class: nginx
#     nginx.ingress.kubernetes.io/use-regex: 'true'
# spec:
#   rules:
#     - host: opuscm.dev
#       http:
#         paths:
#           - path: /api/users/?(.*)
#             backend:
#               serviceName: users-srv
#               servicePort: 3000
#           - path: /api/submittals/?(.*)
#             backend:
#               serviceName: submittals-srv
#               servicePort: 3000
